# digbench

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
digbench/: generate_datasets.py  generate_rectangles.py  postprocessing.py  procedural_squares.py  procedural_squares_final.py  procedural_trench.py  utils.py  visualize_npy.py
excavation_benchmark/: benchmark.py  generate_datasets.py  openstreet.py  postprocessing.py  utils.py
